nav bar components

--- a/src/components/side-bar/side-bar.css
+++ b/src/components/side-bar/side-bar.css
@@ -1,6 +1,6 @@
 .side-bar {
     position: fixed;
-    width: 505px;
+    width: 300px;
     background-color: #196BD8;
     height: 100vh;
     left: 0;
@@ -21,4 +21,5 @@
     position: absolute;
     top: 150px;
     width: 100%;
+    bottom: 0px;
 }
