--- a/src/components/nav-item/nav-item.css
+++ b/src/components/nav-item/nav-item.css
@@ -1,11 +1,19 @@
 .nav-item {
     width: 100%;
-    height: 70px;
+    height: 60px;
     border-bottom: 1px solid #0143AD;
     display: flex;
 }
-.isActive {
+.nav-item.isActive {
     background-color: #CEE6FF;
+}
+.fa-icon {
+    margin-left: 40px;
+    margin-top: 18px;
+
+}
+.nav-item.isActive .nav-text {
+    color: #196BD8 !important;
 }
 
 .nav-text {
@@ -14,17 +22,28 @@
     font-size: 30px;
     letter-spacing: 1.5px;
     font: Medium  Helvetica Neue;
-    padding-top: 25px;
+    padding-top: 20px;
     
     color: white;
-    margin-left: 90px;
+    margin-left: 35px;
 }
 .nav-icon {
     display: inline;
-    margin-left: 51px;
+    margin-left: 20px;
     width: 30px;
     padding-top: 5px;
 }
 .nav-marg{
-    padding: 0 20px;
+    /* padding: 0 20px; */
 }
+
+.dropdown-menu {
+    background-color: #222222;
+    border-radius: 0;
+    border: none;
+    box-shadow: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    width: 100%;
+  }
