--- a/src/components/notify/notify.css
+++ b/src/components/notify/notify.css
@@ -1,7 +1,7 @@
 .notify {
     border-radius: 100%;
     color: white;
-    background-color: #D80B0B;
+    
     text-align: center;
     display: inline-flex;
     margin-left: 20px;
@@ -20,4 +20,11 @@
     font-size: 9px;
     line-height: 15px;
     padding-left: 5px;
+}
+.top-notify {
+    
+    position: absolute;
+    margin: 0;
+    bottom: 10px;
+    left: 35px;
 }
