--- a/src/components/notify/notify.css
+++ b/src/components/notify/notify.css
@@ -8,10 +8,11 @@
     
 }
 .bgg {
-    height: 30px;
-    width:30px;
+    height: 20px;
+    width: 20px;
     font-size: 10px;
-    line-height: 30px;
+    line-height: 20px;
+    padding-left: 3px;
 }
 
 .smm {
